--- a/lesson/lesson_1.html
+++ b/lesson/lesson_1.html
@@ -82,9 +82,21 @@
 			без пароля. Теперь вы должны оказаться в среде MySQL и сможете приступить 
 			к вводу команд. Чтобы убедиться в том, что все работает должным образом, 
 			введите следующую команду, результат выполнения которой должен быть похож на 
-			показанный на рис. 1:</p>
+			показанный на скриншоте ниже.</p>
 			<div class="vid_zap">SHOW databases;</div>
 			<img src="../img/less1_img1.jpg">
+			<p>В перечне баз данных могут присутствовать и другие ранее созданные базы, 
+			среди которых базы testможет и не оказаться.</p>
+			<p>Следует также понимать, что все находится под полным контролем системного 
+			администратора, и вы можете столкнуться с некоторыми неожиданными настройками. 
+			Например, может оказаться, что вам следует ставить перед именами всех создаваемых 
+			вами баз данных уникальную идентификационную строку, обеспечивающую 
+			их бесконфликтную работу с базами данных, созданными другими пользователями.</p>
+			<p>При возникновении любых проблем нужно переговорить с системным администратором, 
+			который должен с ними разобраться. У него нужно запросить имя поль-зователя и пароль 
+			и попросить дать вам возможность создавать новые базы данных 
+			или как минимум попросить создать для вас хотя бы одну готовую к работе базу 
+			данных. Тогда в этой базе можно будет создать все необходимые таблицы.</p>
 		</div>
 		<div class="disguise_block" id="less1_myadmin" hidden="true">
 			<h2>Работа с MySQL через phpMyAdmin</h2>
@@ -96,6 +108,9 @@
 			пункт <b>Дополнительно => PhpMyAdmin</b>. Далее вводим данные как на рисунке 2, и 
 			жмем кнопку <b>Вперед</b></p>
 			<img src="../img/less1_img4.jpg">
+			<div class="next">
+				<button class="button"><a href="../lesson/lesson_7.html">Подробнее о PhpMyAdmin</a></button>
+			</div>
 		</div>
 		<div class="disguise_block" id="less1_php" hidden="true">
 			<h2>Доступ к MySQL с использованием PHP</h2>
@@ -122,29 +137,75 @@
 			тех пор, пока вы используете базу данных MySQL на своей локальной системе.</p>
 			<img id="less1_code_php" src="../img/less1_img5.jpg">
 	
-		<div class="container">
-			<div class="generator">
-				<p>
-					$db_hostname <input maxlength="25" size="20" value="localhost" id="less1_hostname"> 
-					<a title="Сдесь вы можете ввести свой адрес хоста, если он отличается от localhost, по умолчанию." id="vopros_nametbl" class="vopros" href="#">?</a>
-				</p>
-				<p>
-					$db_database <input maxlength="25" size="20" value="test" id="less1_database"> 
-					<a title="Сдесь необходимо ввести название базы данных к которой необходимо подключиться." id="vopros_nametbl" class="vopros" href="#">?</a>
-				</p>
-				<p>
-					$db_username <input maxlength="25" size="20" value="user" id="less1_username"> 
-					<a title="Сдесь необходимо ввести имя пользователя от имени которго необходимо подключится к базе данных." id="vopros_nametbl" class="vopros" href="#">?</a>
-				</p>
-				<p>
-					$db_password <input maxlength="25" size="20" value="password" id="less1_password"> 
-					<a title="Сдесь необходимо ввести пароль для входа в базу данных." id="vopros_nametbl" class="vopros" href="#">?</a>
-				</p>
-				<button class="button" id="less1_button_phpcode"><a>Создать код PHP</a></button>
+			<div class="container">
+				<div class="generator">
+					<p>
+						$db_hostname <input maxlength="25" size="20" value="localhost" id="less1_hostname"> 
+						<a title="Сдесь вы можете ввести свой адрес хоста, если он отличается от localhost, по умолчанию." id="vopros_nametbl" class="vopros" href="#">?</a>
+					</p>
+					<p>
+						$db_database <input maxlength="25" size="20" value="test" id="less1_database"> 
+						<a title="Сдесь необходимо ввести название базы данных к которой необходимо подключиться." id="vopros_nametbl" class="vopros" href="#">?</a>
+					</p>
+					<p>
+						$db_username <input maxlength="25" size="20" value="user" id="less1_username"> 
+						<a title="Сдесь необходимо ввести имя пользователя от имени которго необходимо подключится к базе данных." id="vopros_nametbl" class="vopros" href="#">?</a>
+					</p>
+					<p>
+						$db_password <input maxlength="25" size="20" value="password" id="less1_password"> 
+						<a title="Сдесь необходимо ввести пароль для входа в базу данных." id="vopros_nametbl" class="vopros" href="#">?</a>
+					</p>
+					<button class="button" id="less1_button_phpcode"><a>Создать код PHP</a></button>
+				</div>
+				<div class="generator vid_zap" id="less1_polezapros">Нажмите кнопку: "Создать код PHP"</div>
 			</div>
-			<div class="generator vid_zap" id="less1_polezapros">Нажмите кнопку: "Создать код PHP"</div>
+			<h2>Подключение к MySQL</h2>
+				<p>После сохранения файла login.phpможно будет с помощью инструкции require_once 
+				включать его в любые PHP-файлы, которым нужен доступ к базе данных. 
+				Выбор пал именно на эту инструкцию, а не на инструкцию include, поскольку, если 
+				файл не будет найден, он сгенерирует фатальную ошибку. И уж поверьте мне, если 
+				не будет найден файл, содержащий сведения для подключения к вашей базе данных, 
+				это действительно будет фатальной ошибкой.</p>
+				<p>А использование require_once, а не require означает, что файл будет считан 
+				что исключит совершенно бесполезные повторные обращения к диску.</p>
+				<div class="vid_zap">< ?php //без пробела <br>
+				require_once 'login.php';<br>
+				$db_server = mysql_connect($db_hostname, $db_username, $db_password);<br>
+				if (!$db_server) die("Невозможно подключиться к MySQL: " . mysql_error());<br>
+				?></div>
+				<p>В этом примере запускается PHP-функция mysql_connect, которой нужны три 
+				параметра: имя хоста(hostname) MySQL-сервера, имя пользователя(username) 
+				и пароль(password). В случае успешного подключения эта функция возвращает 
+				идентификаторсервера, а в случае неудачи — значение FALSE. Обратите внимание 
+				на то, что инструкция ifво второй строке используется вместе с функцией 
+				die, работа которой созвучна ее имени (прекратить) и заключается в выходе из 
+				PHP с сообщением об ошибке, если переменная $db_serverне имеет истинного 
+				значения.</p>
+				<p>В сообщении, передаваемом функции die, объясняется, что подключиться 
+				к базе данных MySQL не представилось возможным, и чтобы помочь выяснить 
+				причины произошедшего, здесь содержится вызов функции mysql_error. Эта 
+				функция выводит текст объяснения ошибки, возникшей при вызове последней 
+				функции MySQL.</p>
+				<p>Сервер базы данных, указанный в переменной $db_server, будет задействован 
+				в ряде следующих примеров для идентификации запрашиваемого сервера MySQL. 
+				При таком использовании идентификаторов появляется возможность подключения 
+				и доступа к нескольким серверам MySQL из одной PHP-программы.</p>
+				<h2>Выбор базы данных</h2>
+				<p>После успешного подключения к MySQL появляется возможность выбрать базу 
+				данных, с которой нужно будет работать.</p>
+				<div class="vid_zap">mysql_select_db($db_database)<br>
+				or die("Невозможно выбрать базу данных: " . mysql_error());</div>
+				<p>Для выбора базы данных используется команда <b>mysql_select_db</b>. Ей нужно 
+				передать имя требуемой базы данных и сервер, к которому вы подключены. Как и 
+				в предыдущем примере для вывода сообщения об ошибке и объяснения ее причины 
+				в случае сбоя при выборе базы данных в код включена функция <b>die</b>. Единственное 
+				отличие состоит в том, что в этом примере не нужно запоминать значение, 
+				возвращаемое функцией <b>mysql_select_db</b>, поскольку она возвращает либо TRUE, либо FALSE. 
+				Поэтому был использован PHP-оператор <b>or</b>, означающий следующее: «Если при 
+				выполнении предыдущей команды произойдет сбой, нужно выполнить тот код, 
+				который следует за этим оператором». Учтите, что для срабатывания оператора <b>or</b>
+				в конце первой строки кода не должно быть точки с запятой.</p>
 		</div>
-	</div>
 <!--================= ПОДВАЛ ===================-->
 	<footer id="footer">
 		<div class="foot">
