--- a/lessons.html
+++ b/lessons.html
@@ -31,65 +31,46 @@
 		<a class="less" href="lesson/lesson_1.html">
 			<div>
 				<p class="lessName">Урок 1. Введение в MySQL</p>
-				<p>Вводный урок, в котором вы узнаете о способах подключения 
+				<p>Вводный урок, в котором вы узнаете о подключении 
 				к базам данных MySQL.
 				</p>
 			</div>
 		</a>
 		<a class="less" href="lesson/lesson_2.html">
 			<div>
-				<p class="lessName">Урок 2</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
+				<p class="lessName">Урок 2. Синтаксис</p>
+				<p>В этом уроке вы узнаете наиболее популярные команды MySQL
+				и научитесь создавать базы данных.</p>
 			</div>
 		</a>
 		<a class="less" href="lesson/lesson_3.html">
 			<div>
-				<p class="lessName">Урок 3</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
+				<p class="lessName">Урок 3. Создание и удаление таблиц</p>
+				<p>В этом уроке вы узнаете о том как создавать и удалять таблицы MySQL.</p>
 			</div>
 		</a>
 		<a class="less" href="lesson/lesson_4.html">
 			<div>
-				<p class="lessName">Урок 4</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
+				<p class="lessName">Урок 4. Свойства столбцов</p>
+				<p>В этом уроке вы узнаете как задавать и менять свойства столбцов в таблицах.</p>
 			</div>
 		</a>
 		<a class="less" href="lesson/lesson_5.html">
 			<div>
-				<p class="lessName">Урок 5</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
+				<p class="lessName">Урок 5. Вставка и удаление строк</p>
+				<p>В этом уроке вы узнаете о том как вставлять и удалять строки в таблицах.</p>
 			</div>
 		</a>
 		<a class="less" href="lesson/lesson_6.html">
 			<div>
-				<p class="lessName">Урок 6</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
+				<p class="lessName">Урок 6. Поиск записей в таблице</p>
+				<p>В этом уроке вы научитесь искать и извлекать записи из таблиц.</p>
 			</div>
 		</a>
 		<a class="less" href="lesson/lesson_7.html">
 			<div>
-				<p class="lessName">Урок 7</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
-			</div>
-		</a>
-		<a class="less" href="lesson/lesson_8.html">
-			<div>
-				<p class="lessName">Урок 8</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
-			</div>
-		</a>
-		<a class="less" href="lesson/lesson_9.html">
-			<div>
-				<p class="lessName">Урок 9</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла</p>
+				<p class="lessName">Урок 7. PHP My Admin</p>
+				<p>В этом уроке мы познакомимся с веб-интерфейсом PHP My Admin</p>
 			</div>
 		</a>
 	</div>
