--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</p>
 		
 		<div class="next">
-		<button class="button"><a href="kostruct.html">Перейти к занятиям</a></button> 
+		<button class="button"><a href="lessons.html">Перейти к занятиям</a></button> 
 		</div>
 	</div>
 </div>
