--- a/lesson/lesson_1.html
+++ b/lesson/lesson_1.html
@@ -84,7 +84,7 @@
 			введите следующую команду, результат выполнения которой должен быть похож на 
 			показанный на скриншоте ниже.</p>
 			<div class="vid_zap">SHOW databases;</div>
-			<img src="../img/less1_img1.jpg">
+			<img class="imga" src="../img/less1_img1.jpg">
 			<p>В перечне баз данных могут присутствовать и другие ранее созданные базы, 
 			среди которых базы testможет и не оказаться.</p>
 			<p>Следует также понимать, что все находится под полным контролем системного 
@@ -107,7 +107,7 @@
 			этого в панели задач должен отображаться зеленый флажок, жмем на него и выбираем 
 			пункт <b>Дополнительно => PhpMyAdmin</b>. Далее вводим данные как на рисунке 2, и 
 			жмем кнопку <b>Вперед</b></p>
-			<img src="../img/less1_img4.jpg">
+			<img class="imga" src="../img/less1_img4.jpg">
 			<div class="next">
 				<button class="button"><a href="../lesson/lesson_7.html">Подробнее о PhpMyAdmin</a></button>
 			</div>
