--- a/lesson/lesson_7.html
+++ b/lesson/lesson_7.html
@@ -57,20 +57,20 @@
 		<div class="disguise_block" id="less1_cmd" hidden="true">
 			<h2>Создание БД</h2>
 			<p>Для создания базы данных в phpMyAdmin необходимо всего навсего заполнить нужные поля во вкладке "Базы данных":</p>
-			<img src="../img/less7_img1.jpg">
-			<img src="../img/less7_img2.jpg">
+			<img class="imga" src="../img/less7_img1.jpg">
+			<img class="imga" src="../img/less7_img2.jpg">
 			<h2>Удаление БД</h2>
 			<p>Для удаления базы данных в phpMyAdmin, ставим галочку и жмем на иконку, все просто:</p>
-			<img src="../img/less7_img3.jpg">
+			<img class="imga" src="../img/less7_img3.jpg">
 		</div>
 		<div class="disguise_block" id="less1_myadmin" hidden="true">
 			<h2>Создание таблиц</h2>
 			<p>Для того что бы создать таблицу необходимо в списке баз данных выбрать необходимую, и открыть вкладку "Инструменты":</p>
-			<img src="../img/less7_img4.jpg">
+			<img class="imga" src="../img/less7_img4.jpg">
 		</div>
 		<div class="disguise_block" id="less1_php" hidden="true">
 			<h2>Заполнение табицы</h2>
-			<img src="../img/less7_img5.jpg">
+			<img class="imga" src="../img/less7_img5.jpg">
 		</div>
 	</div>
 <!--================= ПОДВАЛ ===================-->
