--- a/spravka/f1.html
+++ b/spravka/f1.html
@@ -24,6 +24,27 @@
 <!--================= КОНТЕНТ ===================-->
 <div class="hr_zagolovok">Типы данных, используемые в базе данных MySQL</div>
 
+	<div class="left">
+		<ul class="sintaksis sintaksis_qq">
+			<li><a href="spravka/f1.html">Типы данных</a>
+			<li><a href="spravka/f2.html">Создание базы данных</a>
+			<li><a href="spravka/f3.html">Удаление базы данных</a>
+			<li><a href="spravka/f4.html">Создание таблицы</a>
+			<li><a href="spravka/f5.html">Удаление таблицы</a>
+			<li><a href="spravka/f6.html">Изменение свойств таблицы</a></li>
+			<ul>
+				<li><a href="spravka/f6_1.html">Переименование таблицы</a>
+				<li><a href="spravka/f6_2.html">Вставка столбцов</a>
+				<li><a href="spravka/f6_3.html">Изменение свойств столбца</a>
+				<li><a href="spravka/f6_4.html">Удаление столбцов</a>
+			</ul>
+			<li><a href="spravka/f7.html">Вставка строки в таблицу</a>
+			<li><a href="spravka/f8.html">Удаление строк из таблицы</a>
+			<li><a href="spravka/f9.html">Обновление записей в таблице</a>
+			<li><a href="spravka/f10.html">Поиск записей в таблице</a>
+		</ul>
+	</div>
+	
 	<div class="content">
 		
 			<h2>Целые числа</h2>
