--- a/lesson/lesson_3.html
+++ b/lesson/lesson_3.html
@@ -10,10 +10,10 @@
 		<script src="../jquery-3.2.1.min.js"></script>
 		<script src="../script_heder_footer.js"></script>
 		<script src="../script.js"></script>
-		
-		
+
+
 	</head>
-	
+
 <body>
 
 <!--================= ШАПКА ===================-->
@@ -21,63 +21,84 @@
 		<div class="hed inner_hed">
 		</div>
 	</header>
-	
+
 <!--================= КОНТЕНТ ===================-->
 <div id="zagolovok" class="hr_zagolovok">Урок 3. Создание и удаление таблиц</div>
 
-	<div id="pods" class="podskazki_minus">
-		Короткая справка <a id="close" href="#">X</a>
-		<div id="podskazki_text"></div>
-	</div>
-	
-<div id="content" class="lessContent">
-	<div class="container">
-		
-		<div>
-			<h2></h2>
-			<p></p>
-			<p></p>
-			<div class="vid_zap"></div>
-			<p> </p>
-			<h2></h2>
-			<p></p>
-			<h2></h2>
-		</div>
-			
-			<div class="less less1" id="less1_cmd_button"><p class="lessName">Работа с интерфейсом командной строки</p></div>
-			<div class="less less1" id="less1_php_button"><p class="lessName">Работа с использованием PHP</p></div>
-	</div>	
+<div id="pods" class="podskazki_minus">
+	Короткая справка <a id="close" href="#">X</a>
+	<div id="podskazki_text"></div>
 </div>
-		<div class="disguise_block" id="less1_cmd" hidden="true">
-			<h2></h2>
-			<p></p>
-			<div class="vid_zap"></div>
-			<p><i></i></p>
-			<p>
-			<img src="../img/less1_img1.jpg">
+
+<div id="content" class="lessContent">
+
+
+		<div class="less less1" id="less1_cmd_button"><p class="lessName">SQL запрос для создания таблицы</p></div>
+		<div class="less less1" id="less1_php_button"><p class="lessName">Создание таблицы с помощью PHP</p></div>
+</div>
+<div class="disguise_block" id="less1_cmd" hidden="true">
+		<h2>Синтаксис CREATE:</h2>
+		<hr>
+		<div class="vid_zap">
+			CREATE [TEMPORARY] TABLE [IF NOT EXISTS] tbl_name [(create_definition,...)]
+			<br>
+			[table_options] [select_statement]
 		</div>
-		<div class="disguise_block" id="less1_php" hidden="true">
-			<h2></h2>
-			<p></p>
-			<h2></h2>
-			<p></p>
-			<img id="less1_code_php" src="../img/less1_img5.jpg">
-	
+	<p>
+		<b>tbl_name</b>
+		- Задает имя таблицы, которая будет создана в текущей базе данных. Если никакая база данных на
+		момен вызова команды <b>CREATE TABLE</b> не была принята текущей, то возникнет ошибка выполнения команды.
+		Начиная с MySQL 3.22 введена возможность явно указать базу данных, в которой будет создана новая
+		таблица, при помощи синтаксиса db_name.tbl_name.
+	</p>
+	<p>
+		<b>TEMPORARY</b>
+		- Этот параметр используется для создания временной таблицы с именем tbl_name в течении только
+		текущего сценария. По окончанию выполнения сценария созданная таблица удаляется. Данная возможность
+		появилась в MySQL 3.23 В MySQL 4.0.2 для создания временных таблиц требуются привелегии <b>CREATE
+		TEMPORARY TABLES.</b>
+	</p>
+			<p>
+				Удаление таблицы производится командой <b>DROP TABLE</b>.
+			</p>
+				<h2>Синтаксис оператора DROP TABLE</h2>
+			<hr>
+				<div class="vid_zap">DROP TABLE [IF EXISTS] tbl_name [, tbl_name,...] [RESTRICT | CASCADE]</div>
+			<p>
+				Этот оператор удаляет таблицу или таблицы из текущей базы данных.
+			</p>
+			<p>
+				<b>tbl_name</b>
+				- Имя удаляемой таблицы.
+			</p>
+
+			<div class="next">
+				<button class="button"><a href="../spravka/f4.html">Подробнее о CREATE TABLE</a></button>
+				<button class="button"><a href="../spravka/f5.html">Подробнее о DROP TABLE</a></button>
+			</div>
+</div>
+
+	<div class="disguise_block" id="less1_php" hidden="true">
+		<h2>Создание и удаление таблицы.</h2>
+		<p>Создание и удаление таблиц с помощью PHP сводится к простому вызову функции
+		<b>CREATE TABLE</b> или <b>DROP TABLE</b>. Попробовать использовать их вы можете с помощью формы:</p>
 		<div class="container">
 			<div class="generator">
 				<p>
-					$db_hostname <input maxlength="25" size="20" value="localhost" id="less1_hostname"> 
-					<a title="Сдесь вы можете ввести свой адрес хоста, если он отличается от localhost, по умолчанию." id="vopros_nametbl" class="vopros" href="#">?</a>
+					Название таблицы <input maxlength="25" size="20" value="name_table" id="nameTable">
+					<a title="Название, создаваемой или удаляемой нами, таблицы" id="vopros_nametbl" class="vopros" href="#">?</a>
 				</p>
-				<button class="button" id="less1_button_phpcode"><a>Создать код PHP</a></button>
+				<button class="button" id="less3_createTable"><a>Создать таблицу</a></button>
+				<button class="button" id="less3_deleteTable"><a>Удалить тыаблицу</a></button>
 			</div>
-			<div class="generator vid_zap" id="less1_polezapros">Нажмите кнопку: "Создать код PHP"</div>
+			<div class="generator vid_zap" id="less3_polezapros">Выберите необходимый тип запроса.</div>
 		</div>
-	</div>
+
+</div>
 <!--================= ПОДВАЛ ===================-->
 	<footer id="footer">
 		<div class="foot">
-		</div>	
+		</div>
 	</footer>
 <div id="toTop"><img class="strelka" src="../up.png"></div >
 </body>
