--- a/lesson/lesson_6.html
+++ b/lesson/lesson_6.html
@@ -10,10 +10,10 @@
 		<script src="../jquery-3.2.1.min.js"></script>
 		<script src="../script_heder_footer.js"></script>
 		<script src="../script.js"></script>
-		
-		
+
+
 	</head>
-	
+
 <body>
 
 <!--================= ШАПКА ===================-->
@@ -21,7 +21,7 @@
 		<div class="hed inner_hed">
 		</div>
 	</header>
-	
+
 <!--================= КОНТЕНТ ===================-->
 <div id="zagolovok" class="hr_zagolovok">Урок 6. Поиск записей в таблице</div>
 
@@ -29,13 +29,13 @@
 		Короткая справка <a id="close" href="#">X</a>
 		<div id="podskazki_text"></div>
 	</div>
-	
+
 <div id="content" class="lessContent">
 	<div class="container">
-		
+
 		<div>
 			<h2>Извлечение записей</h2>
-			<p>После того как вы заполнили таблицу данными, мы можем убедиться в том, что они 
+			<p>После того как вы заполнили таблицу данными, мы можем убедиться в том, что они
 			были благополучно вставлены в эту таблицу. </p>
 			<div class="vid_zap"><pre>
 require_once 'login.php';
@@ -58,52 +58,166 @@ for ($j = 0 ; $j < $rows ; ++$j)
 }
 echo "</ table>";
 			</pre></div>
-			<p>Этот код выдает простой MySQL-запрос SELECT * FROM Table_Name, а затем отображает 
+			<p>Этот код выдает простой MySQL-запрос SELECT * FROM Table_Name, а затем отображает
 			все возвращенные строки.</p>
 			<h2></h2>
 			<p></p>
 			<h2></h2>
 		</div>
-			
+
 			<div class="less less1" id="less1_cmd_button"><p class="lessName">Работа с интерфейсом командной строки</p></div>
 			<div class="less less1" id="less1_php_button"><p class="lessName">Работа с использованием PHP</p></div>
-	</div>	
+	</div>
 </div>
 		<div class="disguise_block" id="less1_cmd" hidden="true">
-			<h2></h2>
-			<p></p>
-			<div class="vid_zap"></div>
-			<p><i></i></p>
+			<h2>Поиск записей осуществляется командой <b>SELECT</b></h2>
+	<div class="vid_zap">
+	SELECT * FROM table_name WHERE (выражение) [order by field_name [desc][asc]]
+	</div>
 			<p>
-			<img src="../img/less1_img1.jpg">
-		</div>
-		<div class="disguise_block" id="less1_myadmin" hidden="true">
-			<h2></h2>
-			<p></p>
-			<img src="../img/less1_img4.jpg">
+				Эта команда ищет все записи в таблице table_name, которые удовлетворяют выражению выражение.
+			</p><p>
+				Если записей несколько, то при указанном предложении order by они будут отсортированы по тому
+				полю, имя которого записывается правее этого ключевого слова (если задано слово desc, то
+				упорядочивание происходит в обратном порядке). В предложении order by могут также задаваться
+				несколько полей.
+			</p><p>
+				Особое значение имеет символ *. Он предписывает, что из отобранных записей следует извлечь
+				все поля, когда будет выполнена команда получения выборки. С другой стороны, вместо звездочки
+				можно через запятую непосредственно перечислить имена полей, которые требуют извлечения. Но
+				чаще всего все же пользуются именно *.
+			</p>
+			<div class="next">
+				<button class="button"><a href="../spravka/f10.html">Подробнее о SELECT FROM</a></button>
+			</div>
 		</div>
 		<div class="disguise_block" id="less1_php" hidden="true">
-			<h2></h2>
-			<p></p>
-			<h2></h2>
-			<p></p>
-			<img id="less1_code_php" src="../img/less1_img5.jpg">
-	
-		<div class="container">
-			<div class="generator">
-				<p>
-					$db_hostname <input maxlength="25" size="20" value="localhost" id="less1_hostname"> 
-					<a title="Сдесь вы можете ввести свой адрес хоста, если он отличается от localhost, по умолчанию." id="vopros_nametbl" class="vopros" href="#">?</a>
-				</p>
-				<button class="button" id="less1_button_phpcode"><a>Создать код PHP</a></button>
-			</div>
-			<div class="generator vid_zap" id="less1_polezapros">Нажмите кнопку: "Создать код PHP"</div>
-		</div>
+			<p>
+				 Выражение FROM table_references задает таблицы, из которых надлежит
+				 извлекать строки.
+			</p><p>
+				Опция WHERE задает условия для выборки данных.
+			</p><p>
+				Например, нам надо найти в таблице, содержащей сообщения в гостевой книге, все записи, которые
+				оставил определенный пользователь.
+			</p>
+	<div class="vid_zap">
+	<pre>
+	// Имя пользователя
+	$user="Admin";
+	// name - имя поля в таблице, которое содержит имена пользователей,
+	// оставивших свои сообщения в гостевой
+	// db_guest - имя таблицы, содержащей сообщения, оставленные в гостевой
+	$sql="select * from db_guest where (name='$user')";
+	$result=mysql_query($sql);
+	// Находим кол-во записей, удовлетворяющих условию
+	$rows=mysql_num_rows($result);
+	echo "$user оставил в гостевой $rows записей.";
+	</pre>
+	</div>
+			<p>
+				Но что делать, если искомый текст не занимает все поле, а является частью этого поля (например,
+				при поиске слова или словосочетания в общем массиве текста)?
+			</p><p>
+				Например я использую следующую команду (наверно этот способ не самый лучший, но тем не менее
+				он работает):
+			</p>
+	<div class="vid_zap">
+	<pre>
+	// $search - содержит искомый тест
+	$sql="select * from db_guest where (locate('$search',content)>0)";
+	$result=mysql_query($sql);
+	</pre>
+	</div>
+			<p>
+				Смысл такой: если кол-во вхождений строки $search в поле content больше 0 (т.е. оно вообще есть),
+				то запись добавляется к остальным найденным записям.
+			</p>
+			<p>
+				Надо отметить, что указанный способ ищет текст с учетом регистра. Чтобы искать без учета
+				регистра, можно воспользоваться следующей командой:
+			</p>
+	<div class="vid_zap">
+	<pre>
+	// $search - содержит искомый тест
+	$sql="select * from db_guest where (locate(lower('$search'),lower(content))>0)";
+	$result=mysql_query($sql);
+	</pre>
+	</div>
+			<p>
+				т.е. искомая строка и запись в таблице переводится в верхний регистр и затем производится поиск.
+			</p><p>
+				Теперь представим, что у нас есть база сообщений гостевой книги, и нам надо отсортировать
+				сообщения по времени, когда они были оставлены.
+			</p><p>
+				Для этого одно из полей таблицы базы должно содержать время записи сообщения.
+			</p><p>
+				Сортировка по какому-либо столбцу осуществляется при помощи конструкции order by.
+			</p><p>
+				В нашем случае, при учете, что более "свежие" сообщения будут сортироваться верхними:
+			</p>
+	<div class="vid_zap">
+	<pre>
+	// time - столбец, содержащий время написания записи
+	// в формате "UNIX timestamp"
+	$sql="SELECT * FROM db_guest ORDER BY time DESC";
+	$result=mysql_query($sql);
+	</pre>
+	</div>
+			<p>
+				Т.е. данные были отсортированны по убыванию.
+			</p><p>
+				Если нам надо отсортировать данные по возрастанию, надо вместо ключевого слова DESC применить ASC:
+			</p>
+	<div class="vid_zap">
+	<pre>
+	$sql="SELECT * FROM db_guest ORDER BY time ASC";
+	$result=mysql_query($sql);
+	</pre>
+	</div>
+			<p>
+				Данные также можно отсортировать по нескольким столбцам. Для этого надо названия столбцов
+				указать через запятую. Это может пригодиться, например, если в столбце, по которому производится
+				сортировка, есть несколько одинаковых значений.
+			</p>
+	<div class="vid_zap">
+	<pre>
+	$sql="SELECT * FROM db_name ORDER BY field1,field2 ASC";
+	$result=mysql_query($sql);
+	</pre>
+	</div>
+			<p>
+				Сначало данные сортируются по первому столбцу field1. Затем, если в первом столбце есть
+				несколько одинаковых значений, выполняется дополнительная сортировка по второму столбцу
+				(внутри группы с одинаковыми значениями в первом столбце).
+			</p><p>
+				Если требуется, чтобы при поиске выдавались не все найденные записи, а определенная группа,
+				то нужно использовать параметр LIMIT.
+			</p><p>
+				В этом параметре задается два значения:
+			</p>
+	<div class="vid_zap">
+	LIMIT start,length
+	</div>
+			<p>
+				start - указывает, с какой позиции нужно выдавать найденные записи
+			</p><p>
+				length - кол-во записей
+			</p><p>
+				Например, нам нужно выбрать из базы данных гостевой книги записи начиная с 20 по 45 (т.е. чтоб
+				вывести 25 записей):
+			</p>
+	<div class="vid_zap">
+	<pre>
+	$sql="select * from db_guest limit 20,25";
+	$result=mysql_query($sql);
+	</pre>
+	</div>
 	</div>
 <!--================= ПОДВАЛ ===================-->
 	<footer id="footer">
 		<div class="foot">
-		</div>	
+		</div>
 	</footer>
 <div id="toTop"><img class="strelka" src="../up.png"></div >
 </body>
